// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification component Renders correctly 1`] = `
<div>
  <div
    aria-live="assertive"
    class="fixed inset-0 flex py-20 py-10 pointer-events-none z-10"
  >
    <div
      class="w-full max-w-7xl mx-auto flex flex-col items-center px-6 space-y-4 md:items-end"
    >
      <div
        class="max-w-sm w-full bg-white shadow-lg rounded-lg pointer-events-auto overflow-hidden"
      >
        <div
          class="p-4"
        >
          <div
            class="flex items-start"
          >
            <div
              class="flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="h-6 w-6 text-positive"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </div>
            <div
              class="ml-3 w-0 flex-1 pt-0.5"
            >
              <p
                class="text-sm leading-5 font-semibold"
              >
                Title
              </p>
              <p
                class="mt-1 text-sm leading-5"
              >
                Content
              </p>
            </div>
            <div
              class="ml-4 flex-shrink-0 flex"
            >
              <button
                class="bg-white rounded-md inline-flex text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
                data-testid="notification-dismiss"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Close
                </span>
                <svg
                  aria-hidden="true"
                  class="h-5 w-5"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component Renders correctly in fail state 1`] = `
<div>
  <div
    aria-live="assertive"
    class="fixed inset-0 flex py-20 py-10 pointer-events-none z-10"
  >
    <div
      class="w-full max-w-7xl mx-auto flex flex-col items-center px-6 space-y-4 md:items-end"
    >
      <div
        class="max-w-sm w-full bg-white shadow-lg rounded-lg pointer-events-auto overflow-hidden"
      >
        <div
          class="p-4"
        >
          <div
            class="flex items-start"
          >
            <div
              class="flex-shrink-0"
            >
              <svg
                aria-hidden="true"
                class="h-6 w-6 text-negative"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </div>
            <div
              class="ml-3 w-0 flex-1 pt-0.5"
            >
              <p
                class="text-sm leading-5 font-semibold"
              >
                Title
              </p>
              <p
                class="mt-1 text-sm leading-5"
              >
                Content
              </p>
            </div>
            <div
              class="ml-4 flex-shrink-0 flex"
            >
              <button
                class="bg-white rounded-md inline-flex text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
                data-testid="notification-dismiss"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Close
                </span>
                <svg
                  aria-hidden="true"
                  class="h-5 w-5"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
